force-app/main/default/objects/clcommon__Party__c/fields/Credit_Report_Enquiry_Callout_Made__c.field-meta.xml
<CustomField>
    <fullName>Credit_Report_Enquiry_Callout_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Report Enquiry Callout  Made</label>
    <type>Checkbox</type>
</CustomField>