force-app/main/default/objects/clcommon__Party__c/fields/Current_Directorships__c.field-meta.xml
<CustomField>
    <fullName>Current_Directorships__c</fullName>
    <label>Current Directorships</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>