force-app/main/default/objects/clcommon__Party__c/fields/Customer_Interview_Check__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interview_Check__c</fullName>
    <formula>IF( Legal_Entity_Type__c == &apos;Individual&apos; &amp;&amp; CONTAINS(AML_search_result__c, &apos;PEP&apos;) &amp;&amp; NOT(CONTAINS(AML_search_result__c, &apos;Clear&apos;))  ,True,False )||
IF( Legal_Entity_Type__c == &apos;Individual&apos; &amp;&amp; CONTAINS(AML_search_result__c, &apos;GWL&apos;) &amp;&amp;  NOT(CONTAINS(AML_search_result__c, &apos;Clear&apos;)) ,True,False ) ||
IF(ISPICKVAL(genesis__Application__r.NCCP_status_list__c, &apos;Regulated&apos;) &amp;&amp;
Legal_Entity_Type__c == &apos;Individual&apos;, True, False) ||
IF(Legal_Entity_Type__c == &apos;Individual&apos; &amp;&amp; genesis__Application__r.genesis__CL_Product_Name__c ==&apos;SMSF Residential&apos; , True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Interview Check</label>
    <type>Checkbox</type>
</CustomField>