force-app/main/default/objects/clcommon__Party__c/fields/Customer_Interview_Signed__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interview_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Interview Signed</label>
    <type>Checkbox</type>
</CustomField>