force-app/main/default/objects/clcommon__Party__c/fields/Date_of_Credit_Report_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Credit_Report_Warning_Check__c</fullName>
    <formula>IF(((VALUE(TEXT((YEAR(genesis__Application__r.CL_Date__c)*12 + MONTH(genesis__Application__r.CL_Date__c)) - (YEAR(Report_Created_Date__c)*12+MONTH(Report_Created_Date__c))))) &lt;= 2.0),
IF((VALUE(TEXT((YEAR(genesis__Application__r.CL_Date__c)*12 + MONTH(genesis__Application__r.CL_Date__c)) - (YEAR(Report_Created_Date__c)*12+MONTH(Report_Created_Date__c))))) == 2.0 &amp;&amp; (DAY(genesis__Application__r.CL_Date__c) &gt;= DAY(Report_Created_Date__c)), FALSE, TRUE), FALSE)</formula>
    <label>Date of Credit Report Warning Check</label>
    <type>Checkbox</type>
</CustomField>