force-app/main/default/objects/clcommon__Party__c/fields/Date_of_most_recent_conduct_issue__c.field-meta.xml
<CustomField>
    <fullName>Date_of_most_recent_conduct_issue__c</fullName>
    <label>Date of most recent conduct issue</label>
    <type>Date</type>
</CustomField>