force-app/main/default/objects/clcommon__Party__c/fields/Date_of_Most_Recent_Credit_Event__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Most_Recent_Credit_Event__c</fullName>
    <label>Date of Most Recent Credit Event</label>
    <type>Date</type>
</CustomField>