force-app/main/default/objects/clcommon__Party__c/fields/Declared_Income_Amount__c.field-meta.xml
<CustomField>
    <fullName>Declared_Income_Amount__c</fullName>
    <label>Declared Income Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>