force-app/main/default/objects/clcommon__Party__c/fields/Description_for_Other_Discretionary_exp__c.field-meta.xml
<CustomField>
    <fullName>Description_for_Other_Discretionary_exp__c</fullName>
    <label>Description for Other&amp;Discretionary exp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>