force-app/main/default/objects/clcommon__Party__c/fields/Diff_Of_Asset_and_Liability__c.field-meta.xml
<CustomField>
    <fullName>Diff_Of_Asset_and_Liability__c</fullName>
    <label>Diff Of Asset and Liability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>