force-app/main/default/objects/clcommon__Party__c/fields/Employment_ABN_Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Employment_ABN_Effective_From__c</fullName>
    <label>Employment ABN Effective From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>