force-app/main/default/objects/clcommon__Party__c/fields/Employment_ABN_Effective_From_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Employment_ABN_Effective_From_Rule_Check__c</fullName>
    <formula>IF( INCLUDES( Employment_Type__c ,&apos;Self Employed&apos;) ,IF(AND(IF(MONTH(TODAY())&gt;MONTH(DATEVALUE( Employment_ABN_Effective_From__c ) ),YEAR(TODAY())-YEAR(DATEVALUE(Employment_ABN_Effective_From__c )),IF(AND(MONTH(TODAY())=MONTH(DATEVALUE (Employment_ABN_Effective_From__c )),DAY(TODAY())&gt;=DAY(DATEVALUE (Employment_ABN_Effective_From__c ))),YEAR(TODAY())-YEAR(DATEVALUE(Employment_ABN_Effective_From__c )),(YEAR(TODAY())-YEAR(DATEVALUE(Employment_ABN_Effective_From__c )))-1))&lt;2,NOT(ISBLANK( DATEVALUE(Employment_ABN_Effective_From__c )))),true,false),false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employment ABN Effective From Rule Check</label>
    <type>Checkbox</type>
</CustomField>