force-app/main/default/objects/clcommon__Party__c/fields/Exit_Strategy_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Exit_Strategy_Commentary__c</fullName>
    <label>Exit Strategy Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>