force-app/main/default/objects/clcommon__Party__c/fields/Exit_Strategy_Section_Render_Check__c.field-meta.xml
<CustomField>
    <fullName>Exit_Strategy_Section_Render_Check__c</fullName>
    <formula>((genesis__Application__r.CL_Date__c -  clcommon__Contact__r.Birthdate)/365) &gt; 45</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exit Strategy Section Render Check</label>
    <type>Checkbox</type>
</CustomField>