force-app/main/default/objects/clcommon__Party__c/fields/Exit_Strategy_Suitable__c.field-meta.xml
<CustomField>
    <fullName>Exit_Strategy_Suitable__c</fullName>
    <label>Exit Strategy Suitable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>