force-app/main/default/objects/clcommon__Party__c/fields/Exp_of_Bankruptcy_Received_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Exp_of_Bankruptcy_Received_Warning_Check__c</fullName>
    <formula>AND(ISPICKVAL(Applicant_ever_declared_banckrupt__c, &apos;Yes&apos;), ISPICKVAL(bankrupt_discharged__c, &apos;Yes&apos;), OR(ISPICKVAL(Explanation_of_Bankruptcy_Received__c, &apos;No&apos;), ISPICKVAL(Explanation_of_Bankruptcy_Received__c, &apos;&apos;)))</formula>
    <label>Exp of Bankruptcy Received Warning Check</label>
    <type>Checkbox</type>
</CustomField>