force-app/main/default/objects/clcommon__Party__c/fields/Explanation_of_Age_of_Credit_File_Commen__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_Age_of_Credit_File_Commen__c</fullName>
    <label>Explanation of Age of Credit File Commen</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>