force-app/main/default/objects/clcommon__Party__c/fields/Explanation_of_Age_of_Credit_File_Rule_C__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_Age_of_Credit_File_Rule_C__c</fullName>
    <formula>IF(Age_of_Credit_File__c &gt; 0 &amp;&amp; Age_of_Credit_File__c &lt;= 6, &apos;Render&apos;, &apos;Not Render&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Explanation of Age of Credit File Rule C</label>
    <type>Text</type>
</CustomField>