force-app/main/default/objects/clcommon__Party__c/fields/Explanation_of_Age_of_Credit_File_Suitab__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_Age_of_Credit_File_Suitab__c</fullName>
    <label>Explanation of Age of Credit File Suitab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>