force-app/main/default/objects/clcommon__Party__c/fields/Explanation_of_Bankruptcy_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_Bankruptcy_Commentary__c</fullName>
    <label>Explanation of Bankruptcy Commentary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>