force-app/main/default/objects/clcommon__Party__c/fields/Explanation_of_Bankruptcy_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_Bankruptcy_Rule_Check__c</fullName>
    <formula>IF(ISPICKVAL(bankrupt_discharged__c, &apos;Yes&apos;),&apos;Render&apos;, &apos;Not Render&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Explanation of Bankruptcy Rule Check</label>
    <type>Text</type>
</CustomField>