force-app/main/default/objects/clcommon__Party__c/fields/Explanation_of_Credit_Enquiries_Commenta__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_Credit_Enquiries_Commenta__c</fullName>
    <label>Explanation of Credit Enquiries Commenta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>