force-app/main/default/objects/clcommon__Party__c/fields/Explanation_Of_Credit_Enquiry_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Explanation_Of_Credit_Enquiry_Rule_Check__c</fullName>
    <formula>IF(NOT(ISNULL(Number_of_Credit_Enquiries_in_Last_12_Mo__c)) &amp;&amp; Number_of_Credit_Enquiries_in_Last_12_Mo__c &gt; 1, &apos;Render&apos;, &apos;Not Render&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Explanation Of Credit Enquiry Rule Check</label>
    <type>Text</type>
</CustomField>