force-app/main/default/objects/clcommon__Party__c/fields/Explanation_of_Credit_Event_Render_Check__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_Credit_Event_Render_Check__c</fullName>
    <formula>Number_Of_Credit_Events__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Explanation of Credit Event Render Check</label>
    <type>Checkbox</type>
</CustomField>