force-app/main/default/objects/clcommon__Party__c/fields/Explanation_of_Credit_Events_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_Credit_Events_Commentary__c</fullName>
    <label>Explanation of Credit Events Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>