force-app/main/default/objects/clcommon__Party__c/fields/Explanation_of_Credit_Events_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_Credit_Events_Rule_Check__c</fullName>
    <description>Explanation of Credit Events Rule Check</description>
    <formula>IF(NOT(ISNULL(Number_Of_Credit_Events__c)) &amp;&amp; Number_Of_Credit_Events__c &gt; 0, &apos;Render&apos;, &apos;Not Render&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Explanation of Credit Events Rule Check</label>
    <type>Text</type>
</CustomField>