force-app/main/default/objects/clcommon__Party__c/fields/Explanation_of_Living_Expense_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_Living_Expense_Rule_Check__c</fullName>
    <formula>IF(NOT(ISNULL(Total_HEM_Monthly_Living_Expenses__c)) &amp;&amp; NOT(ISNULL(Total_HEM_Monthly_Living_Expenses__c)) &amp;&amp; Total_HEM_Monthly_Living_Expenses__c&gt;HEM__c,&apos;Not Render&apos;,&apos;Render&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Explanation of Living Expense Rule Check</label>
    <type>Text</type>
</CustomField>