force-app/main/default/objects/clcommon__Party__c/fields/Explanation_of_Previous_Conduct_Suitable__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_Previous_Conduct_Suitable__c</fullName>
    <label>Explanation of Previous Conduct Suitable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>