force-app/main/default/objects/clcommon__Party__c/fields/Explanation_Provided__c.field-meta.xml
<CustomField>
    <fullName>Explanation_Provided__c</fullName>
    <label>Explanation Provided</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>