force-app/main/default/objects/clcommon__Party__c/fields/Explanation_Provided_Render_Check__c.field-meta.xml
<CustomField>
    <fullName>Explanation_Provided_Render_Check__c</fullName>
    <formula>Number_of_Credit_Enquiries_in_Last_12_Mo__c &gt; 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Explanation Provided Render Check</label>
    <type>Checkbox</type>
</CustomField>