force-app/main/default/objects/clcommon__Party__c/fields/External_Administrators__c.field-meta.xml
<CustomField>
    <fullName>External_Administrators__c</fullName>
    <label>External Administrators</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>