force-app/main/default/objects/clcommon__Party__c/fields/Family_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Family_Allowance__c</fullName>
    <label>Family Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>