force-app/main/default/objects/clcommon__Party__c/fields/File_create_date__c.field-meta.xml
<CustomField>
    <fullName>File_create_date__c</fullName>
    <label>File create date</label>
    <type>Date</type>
</CustomField>