force-app/main/default/objects/clcommon__Party__c/fields/Financial_Adviser_Name__c.field-meta.xml
<CustomField>
    <fullName>Financial_Adviser_Name__c</fullName>
    <label>Financial Adviser Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>