force-app/main/default/objects/clcommon__Party__c/fields/General_Messages__c.field-meta.xml
<CustomField>
    <fullName>General_Messages__c</fullName>
    <label>General Messages</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>