force-app/main/default/objects/clcommon__Party__c/fields/genesis__Administrator__c.field-meta.xml
<CustomField>
    <fullName>genesis__Administrator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to determine whether the employee is an administrator.</description>
    <inlineHelpText>Flag to determine whether the employee is an administrator.</inlineHelpText>
    <label>Administrator</label>
    <type>Checkbox</type>
</CustomField>