force-app/main/default/objects/clcommon__Party__c/fields/genesis__Back_End_Debt_To_Income_Ratio__c.field-meta.xml
<CustomField>
    <fullName>genesis__Back_End_Debt_To_Income_Ratio__c</fullName>
    <description>This field stores the Back End DTI ratio for a party</description>
    <inlineHelpText>This field stores the Back End DTI ratio for a party</inlineHelpText>
    <label>Back End Debt To Income Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>