force-app/main/default/objects/clcommon__Party__c/fields/genesis__Credit_Check_Consent__c.field-meta.xml
<CustomField>
    <fullName>genesis__Credit_Check_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Consent to perform a credit check and employment/income verification</description>
    <inlineHelpText>I hereby authorize you to check my credit and employment history and to answer permissible questions, under the Fair Credit Reporting Act, others may ask you about my credit record with you.</inlineHelpText>
    <label>Credit Check Consent</label>
    <type>Checkbox</type>
</CustomField>