force-app/main/default/objects/clcommon__Party__c/fields/genesis__Enabled__c.field-meta.xml
<CustomField>
    <fullName>genesis__Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to determine whether the employee is an active employee of the company or not.</description>
    <inlineHelpText>Flag to determine whether the employee is an active employee of the company or not.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>