force-app/main/default/objects/clcommon__Party__c/fields/genesis__Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>genesis__Parent_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to account which is assigned as parent company to this party.</description>
    <inlineHelpText>Reference to account which is assigned as parent company to this party.</inlineHelpText>
    <label>Parent Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parties (Parent Company)</relationshipLabel>
    <relationshipName>Parties1</relationshipName>
    <type>Lookup</type>
</CustomField>