force-app/main/default/objects/clcommon__Party__c/fields/genesis__Party_Name__c.field-meta.xml
<CustomField>
    <fullName>genesis__Party_Name__c</fullName>
    <formula>IF(  ISBLANK( clcommon__Account__c )  ,
                 IF( ISBLANK( clcommon__Contact__c ) ,  IF(  ISBLANK( clcommon__User__c ) , &apos;&apos;,  clcommon__User__r.FirstName + &apos; &apos; + clcommon__User__r.LastName) , clcommon__Contact__r.FirstName + &apos; &apos; +  clcommon__Contact__r.LastName ) , clcommon__Account__r.Name )</formula>
    <label>Party</label>
    <type>Text</type>
</CustomField>