force-app/main/default/objects/clcommon__Party__c/fields/Gift_Stat_Dec_Received__c.field-meta.xml
<CustomField>
    <fullName>Gift_Stat_Dec_Received__c</fullName>
    <label>Gift Stat Dec Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>