force-app/main/default/objects/clcommon__Party__c/fields/Gift_Stat_Dec_Received_Condition_Check__c.field-meta.xml
<CustomField>
    <fullName>Gift_Stat_Dec_Received_Condition_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Stat Dec Received Condition Check</label>
    <type>Checkbox</type>
</CustomField>