force-app/main/default/objects/clcommon__Party__c/fields/GST_Commentary__c.field-meta.xml
<CustomField>
    <fullName>GST_Commentary__c</fullName>
    <label>GST Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>