force-app/main/default/objects/clcommon__Party__c/fields/GST_Effective_From_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>GST_Effective_From_Warning_Check__c</fullName>
    <formula>IF(Goods_Services_Tax__c == &apos;Not currently registered for GST&apos;, TRUE, AND((genesis__Application__r.CL_Date__c - DATEVALUE(Goods_Services_Tax__c))/365 &lt; 1, OR(ISPICKVAL(Risk_Grade__c, &apos;Prime&apos;), ISPICKVAL(Risk_Grade__c, &apos;Near Prime&apos;))))</formula>
    <label>GST Effective From Warning Check</label>
    <type>Checkbox</type>
</CustomField>