force-app/main/default/objects/clcommon__Party__c/fields/GST_Suitable__c.field-meta.xml
<CustomField>
    <fullName>GST_Suitable__c</fullName>
    <label>GST Suitable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>