force-app/main/default/objects/clcommon__Party__c/fields/GST_Suitable_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>GST_Suitable_Rule_Check__c</fullName>
    <description>GST Suitable Rule Check</description>
    <formula>IF(NOT(ISNULL(Goods_Services_Tax__c)) &amp;&amp; Goods_Services_Tax__c != &apos;Not currently registered for GST&apos; &amp;&amp;((((YEAR($User.loan__Current_Branch_s_System_Date__c)-(VALUE(MID(Goods_Services_Tax__c,0,4))))*12) + (MONTH($User.loan__Current_Branch_s_System_Date__c) - (VALUE(MID(Goods_Services_Tax__c,6,2)))))&lt;6),&apos;Render&apos;,&apos;Not Render&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST Suitable Rule Check</label>
    <type>Text</type>
</CustomField>