force-app/main/default/objects/clcommon__Party__c/fields/Has_Broker_provided_a_fully_completed_Cu__c.field-meta.xml
<CustomField>
    <fullName>Has_Broker_provided_a_fully_completed_Cu__c</fullName>
    <label>Has Broker provided a fully completed Cu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>