force-app/main/default/objects/clcommon__Party__c/fields/HEM__c.field-meta.xml
<CustomField>
    <fullName>HEM__c</fullName>
    <label>HEM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>