force-app/main/default/objects/clcommon__Party__c/fields/Income_for_servicing_purposes__c.field-meta.xml
<CustomField>
    <fullName>Income_for_servicing_purposes__c</fullName>
    <formula>IF(OR(AND( Total_Current_Income_Period__c &gt; Total_Previous_Income_Period__c ,Total_Current_Income_Period__c &lt;(Total_Previous_Income_Period__c*1.2)),Total_Current_Income_Period__c&lt;Total_Previous_Income_Period__c), Total_Current_Income_Period__c, if(Total_Current_Income_Period__c &gt; (1.2*Total_Previous_Income_Period__c),Total_Previous_Income_Period__c*1.2, null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income for servicing purposes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>