force-app/main/default/objects/clcommon__Party__c/fields/Income_greater_than_previous_year__c.field-meta.xml
<CustomField>
    <fullName>Income_greater_than_previous_year__c</fullName>
    <formula>IF(OR(Total_Current_Income_Period__c &gt; Total_Previous_Income_Period__c), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income greater than previous year</label>
    <type>Text</type>
</CustomField>