force-app/main/default/objects/clcommon__Party__c/fields/Incorporation_Date__c.field-meta.xml
<CustomField>
    <fullName>Incorporation_Date__c</fullName>
    <label>Incorporation Date</label>
    <type>Date</type>
</CustomField>