force-app/main/default/objects/clcommon__Party__c/fields/Individual_Address__c.field-meta.xml
<CustomField>
    <fullName>Individual_Address__c</fullName>
    <label>Individual Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>