force-app/main/default/objects/clcommon__Party__c/fields/Insolvencies_Actions__c.field-meta.xml
<CustomField>
    <fullName>Insolvencies_Actions__c</fullName>
    <label>Insolvencies &amp; Actions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>