force-app/main/default/objects/clcommon__Party__c/fields/Investment_property_utilities__c.field-meta.xml
<CustomField>
    <fullName>Investment_property_utilities__c</fullName>
    <inlineHelpText>Utilities,rates &amp; related costs.</inlineHelpText>
    <label>Investment property utilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>