force-app/main/default/objects/clcommon__Party__c/fields/Investment_Property_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Investment_Property_Warning_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investment Property Warning Check</label>
    <type>Checkbox</type>
</CustomField>