force-app/main/default/objects/clcommon__Party__c/fields/Is_General_Security_Aggrement_Being_Take__c.field-meta.xml
<CustomField>
    <fullName>Is_General_Security_Aggrement_Being_Take__c</fullName>
    <label>Is General Security Aggrement Being Take</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>