force-app/main/default/objects/clcommon__Party__c/fields/Is_GSA_Being_Taken_over_this_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_GSA_Being_Taken_over_this_Applicant__c</fullName>
    <inlineHelpText>Is General Security Agreement Being Taken over this Applicant?</inlineHelpText>
    <label>Is GSA Being Taken over this Applicant?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>