force-app/main/default/objects/clcommon__Party__c/fields/Is_Lender_Staff__c.field-meta.xml
<CustomField>
    <fullName>Is_Lender_Staff__c</fullName>
    <label>Is Lender Staff</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>